[gd_scene load_steps=6 format=3 uid="uid://b1qfnub7jf48i"]

[ext_resource type="Theme" uid="uid://bc3ohqpp1sfg3" path="res://asset/art/transparency_theme.tres" id="1_bctes"]
[ext_resource type="Script" path="res://ui/Buttons/CheckButton.gd" id="1_nsn0h"]
[ext_resource type="Texture2D" uid="uid://h8d4pl1aqgil" path="res://asset/UI/checkButton.png" id="2_4avoe"]

[sub_resource type="Animation" id="Animation_jgqv8"]
resource_name = "icon_motion"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(50, -45), Vector2(50, -55), Vector2(50, -45)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbgwu"]
_data = {
"icon_motion": SubResource("Animation_jgqv8")
}

[node name="CheckButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1820.0
offset_bottom = -832.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bctes")
vertical_icon_alignment = 0
script = ExtResource("1_nsn0h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(50, -54.4091)
texture = ExtResource("2_4avoe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tbgwu")
}
autoplay = "icon_motion"

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
